<resources>
    <string name="app_name">51二宝</string>
    <string name="common_string_hyl">好孕率</string>
    <string name="common_more">更多</string>

    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>

    <string name="fragment_first_page">首页</string>
    <string name="fragment_my_record">记录</string>
    <string name="fragment_my_classroom">课堂</string>
    <string name="fragment_my_center">我的</string>

    <string name="fp_knowlege_bar_title">二胎备孕指南</string>
    <string name="fp_toolbox_tw">基础体温</string>
    <string name="fp_toolbox_zj">二胎自检</string>
    <string name="fp_toolbox_hyd">化验单</string>
    <string name="fp_toolbox_wish">许愿</string>
    <string name="format_date">"yyyy/MM/dd"</string>
    <string name="date_text_yj">月经期</string>
    <string name="date_text_pl">排卵期</string>
    <string name="date_text_aq">安全期</string>
    <string name="date_text_plr">排卵日</string>
    <string name="date_text_yc">预测期</string>
    <string name="date_text_aa">爱爱</string>
    <string name="temp_input">输入体温</string>
    <string name="temp_update">修改体温</string>
    <string name="temp_batch_input">批量输入</string>
    <string name="temp_input_commit">提交</string>
    <string name="temp_input_tip">输入\n体温</string>
    <string name="temp_update_tip">修改\n体温</string>
    <string name="temp_format_input">请输入正确的温度</string>
    <string name="temp_input_alarm">8:00 提醒</string>

    <!-- -->

    <string name="record_item_ys">叶酸</string>
    <string name="record_item_yd">运动</string>
    <string name="record_item_aa">爱爱</string>
    <string name="record_item_yjl">月经开始</string>
    <string name="record_item_yjz">月经结束</string>
    <string name="record_item_tw">体温</string>
    <string name="record_item_bd">白带</string>
    <string name="record_item_pl">排卵试纸</string>
    <string name="record_item_zy">早孕试纸</string>
    <string name="record_item_bw">备忘录</string>
    <string name="record_item_makewish">许愿</string>
    <string name="record_item_feeling">心情</string>
    <string name="record_item_symptom">症状</string>
    <!-- 个人中心-->

    <string name="my_center_manual">用户指南</string>
    <string name="my_center_fav">我的收藏</string>
    <string name="my_center_mens">经期修改</string>
    <string name="my_center_feedback">用户反馈</string>
    <string name="my_center_version">版本更新</string>
    <string name="my_center_about">关于</string>
    <string name="my_center_exit">退出</string>
</resources>
