<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xiaoyu.erbao.entries.MainActivity">

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        android:id="@+id/fgContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstPage"
            android:layout_width="0dp"
            android:text="@string/fragment_first_page"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/myRecord"
            android:layout_width="0dp"
            android:text="@string/fragment_my_record"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/myClassroom"
            android:layout_width="0dp"
            android:text="@string/fragment_my_classroom"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/myCenter"
            android:layout_width="0dp"
            android:text="@string/fragment_my_center"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
